Correct capitalization in celebration message

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         function celebrate() {
             const title = document.getElementById('mainTitle');
             title.style.fontFamily = "'Pacifico', cursive";
-            title.innerHTML = "Ale czad!! ❤️❤️❤️";
+            title.innerHTML = "ale czad!! ❤️❤️❤️";
             title.style.fontSize = "4.5rem";
             
             noBtn.style.display = 'none';
