--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             box-shadow: 0 0 15px 3px rgba(255, 255, 255, 0.9);
         }
     </style>
-    <script src="https://www.youtube.com/iframe_api"></script>
+    <script src="https://www.youtube.com/watch?v=U-l4ya3ejko"></script>
 </head>
 <body>
 
